--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "homepage": "https://talmoe.com/",
-
   "name": "talmoe-react-app",
   "version": "0.1.0",
   "private": true,
@@ -13,10 +12,11 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "emailjs-com": "^3.2.0",
+    "joi": "^17.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
